--- a/pages/culture/cultural_news6.html
+++ b/pages/culture/cultural_news6.html
@@ -9,56 +9,53 @@
 </head>
 
 <body>
-
-    <body>
-        <!-- started here navbar -->
-
-        <header>
-            <nav>
-                <div class="top-navbar">
-                    <div>
-                        <h4>The</h4>
-                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                    <div>
-                        <ul class="top-nav-list">
-                            <li><a href="./../../index.html">Home</a></li>|
-                            <li><a href="./../aboutusPage.html">About</a></li>|
-                            <li><a href="">Contact</a></li>|
-                            <li><a href="">Login</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <div class="top-nav-icons">
-                            <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                    alt="facebook-icon" target="_blank"></a>
-                            <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                    alt="instagram-icon"></a>
-                            <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                    alt="telegram-icon"></a>
-                            <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                    alt="youtube-icon"></a>
-                        </div>
-                        <div class="top-nav-search-bar">
-                            <input type="text" placeholder="Search news" />
-                            <img src="./../../images/magnifying-glass.png" />
-                        </div>
-                    </div>
-                </div>
-
+    <!-- started here navbar -->
+    <header>
+        <nav>
+            <div class="top-navbar">
                 <div>
-                    <ul class="nav-list">
-                        <li><a href="">world news</a></li>
-                        <li><a href="">Sports</a></li>
-                        <li><a href="./../tech/tech.html">Tech</a></li>
-                        <li><a href="">Entertainment</a></li>
-                        <li><a href="">Business</a></li>
-                        <li><a href="">Culture</a></li>
-                        <li><a href="">Education</a></li>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
-            </nav>
-        </header>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="Business_News.html">Business</a></li>
+                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
         <!--Read More content started-->
         <div class="readmore-heading-details">
