--- a/pages/worldnews/worldnews_4.html
+++ b/pages/worldnews/worldnews_4.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World News</title>
-    <link rel="stylesheet" href="./../../CSS/business.css" />
+    <link rel="stylesheet" href="./../../CSS/worldnews.css" />
     <<link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 
