--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -204,7 +204,7 @@
                     <li><a href="tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
